--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         </div>
 
         <div class="col-md-4 col-lg-3 col-sm-12 custom-btn">
-          <a href="https://en.wikipedia.org/wiki/Polkadot_(cryptocurrency)"><img src="images/polkadot.jpg" alt="polkadot" width="210" height="80"></a>
+          <a href="https://en.wikipedia.org/wiki/Polkadot_(cryptocurrency)"><img src="images/Polkadot.jpg" alt="polkadot" width="210" height="80"></a>
         </div>
 
         <div class="col-md-4 col-lg-3 col-sm-12 custom-btn">
